# arkimedes-web-scrape-ggqkgy

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  release.yml  security-scan.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/: README.md
infrastructure/docker/elasticsearch/: Dockerfile
infrastructure/docker/fluentd/: Dockerfile
infrastructure/docker/grafana/: Dockerfile
infrastructure/docker/kibana/: Dockerfile
infrastructure/docker/prometheus/: Dockerfile
infrastructure/kubernetes/apps/backend/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/apps/frontend/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/base/: namespaces.yaml  network-policies.yaml  storage-classes.yaml
infrastructure/kubernetes/cert-manager/: values.yaml
infrastructure/kubernetes/ingress/nginx/: values.yaml
infrastructure/kubernetes/logging/elasticsearch/: values.yaml
infrastructure/kubernetes/logging/fluentd/: values.yaml
infrastructure/kubernetes/logging/kibana/: values.yaml
infrastructure/kubernetes/monitoring/grafana/: values.yaml
infrastructure/kubernetes/monitoring/jaeger/: values.yaml
infrastructure/kubernetes/monitoring/prometheus/: values.yaml
infrastructure/kubernetes/secrets/vault/: values.yaml
infrastructure/kubernetes/service-mesh/istio/: values.yaml
infrastructure/scripts/: backup-databases.sh  deploy-logging.sh  deploy-monitoring.sh  init-cluster.sh  rotate-credentials.sh
infrastructure/terraform/aws/: cloudfront.tf  cloudwatch.tf  documentdb.tf  eks.tf  elasticache.tf  iam.tf  kms.tf  main.tf  outputs.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/backend/src/: __init__.py
src/backend/src/api/: __init__.py  server.py
src/backend/src/api/auth/: __init__.py  handlers.py  models.py  schemas.py
src/backend/src/api/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
src/backend/src/api/routes/: __init__.py  data.py  health.py  metrics.py  tasks.py
src/backend/src/api/schemas/: __init__.py  data.py  tasks.py
src/backend/src/db/: __init__.py  session.py
src/backend/src/db/migrations/: README.md  env.py  script.py.mako
src/backend/src/db/models/: __init__.py  data.py  execution.py  task.py  user.py
src/backend/src/scraper/: __init__.py  config.py  scheduler.py
src/backend/src/scraper/browser/: __init__.py  manager.py  playwright.py
src/backend/src/scraper/extractors/: __init__.py  base.py  html.py  json.py  xml.py
src/backend/src/scraper/middleware/: __init__.py  auth.py  proxy.py  rate_limit.py
src/backend/src/scraper/pipeline/: __init__.py  cleaner.py  processor.py  transformer.py  validator.py
src/backend/src/services/: __init__.py  auth.py  cache.py  metrics.py  proxy.py  storage.py  task.py
src/backend/src/utils/: __init__.py  concurrency.py  encryption.py  logging.py  retry.py  validation.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_api.py  test_scraper.py
src/backend/tests/unit/: __init__.py  test_extractors.py  test_pipeline.py  test_scheduler.py  test_services.py  test_utils.py
src/web/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  index.html  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
src/web/src/api/: auth.ts  data.ts  index.ts  metrics.ts  tasks.ts
src/web/src/components/auth/: LoginForm.tsx  MFAForm.tsx  PasswordReset.tsx
src/web/src/components/common/: AlertDialog.tsx  Breadcrumbs.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  PageHeader.tsx  Pagination.tsx  SearchBar.tsx  Sidebar.tsx  StatusBadge.tsx  TableSkeleton.tsx  Topbar.tsx
src/web/src/components/dashboard/: ActiveTasksCard.tsx  PerformanceChart.tsx  QuickActions.tsx  RecentAlerts.tsx  SystemHealth.tsx  TaskPerformance.tsx
src/web/src/config/: api.ts  auth.ts  charts.ts  constants.ts  routes.ts  theme.ts
src/web/src/context/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/web/src/hooks/: useApi.ts  useAuth.ts  useDebounce.ts  useLocalStorage.ts  useMediaQuery.ts  useWebSocket.ts
src/web/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  MainLayout.tsx
src/web/src/pages/: Dashboard.tsx  DataExplorer.tsx  Login.tsx  NotFound.tsx  Settings.tsx  TaskDetails.tsx  Tasks.tsx
src/web/src/services/: api.ts  auth.ts  storage.ts  websocket.ts
src/web/src/store/: authSlice.ts  dataSlice.ts  index.ts  settingsSlice.ts  taskSlice.ts
src/web/src/styles/: global.css  theme.ts
src/web/src/types/: api.ts  auth.ts  common.ts  data.ts  settings.ts  task.ts
src/web/src/utils/: api.ts  auth.ts  date.ts  format.ts  storage.ts  validation.ts
src/web/src/validation/: auth.ts  data.ts  settings.ts  task.ts
src/web/tests/: setup.ts
src/web/tests/hooks/: useApi.test.ts
src/web/tests/services/: api.test.ts
src/web/tests/store/: authSlice.test.ts
src/web/tests/utils/: validation.test.ts
(+25 files in other folders)
