[metadata]
name = web_scraping_platform
description = Enterprise-grade web scraping platform for automated data collection
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Organization
author_email = dev@yourorganization.com
license = Proprietary
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[flake8]
max-line-length = 100
extend-ignore = E203
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    src/db/migrations/versions
per-file-ignores =
    src/db/migrations/env.py:E402

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100
skip = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
plugins = pydantic.mypy
exclude = tests/, src/db/migrations/

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --cov=src
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html
    --no-cov-on-fail
    --asyncio-mode=auto
markers =
    unit: marks tests as unit tests
    integration: marks tests as integration tests
    slow: marks tests as slow running
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[coverage:run]
source = src
omit = 
    tests/*
    src/db/migrations/*
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
fail_under = 80

[options]
python_requires = >=3.11
package_dir =
    = src
zip_safe = False
include_package_data = True

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    black>=23.7.0
    flake8>=6.1.0
    isort>=5.12.0
    mypy>=1.5.0
    pytest>=7.4.0
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    pytest-xdist>=3.3.1
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    pytest-xdist>=3.3.1